Improve input handling and added high score management